--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "tsc --noEmit -p ."
   },
   "dependencies": {
-    "next": "9.5.2",
+    "next": "^9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
