--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "lint": "tsc --noEmit -p ."
   },
   "dependencies": {
-    "next": "^9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "next": "^10.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
-    "@types/styled-components": "^5.1.2",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
-    "file-loader": "^6.0.0",
-    "husky": "^4.2.5",
-    "imagemin-webp-webpack-plugin": "^3.3.2",
-    "typescript": "^4.0.2"
+    "file-loader": "^6.2.0",
+    "husky": "^4.3.0",
+    "imagemin-webp-webpack-plugin": "^3.3.3",
+    "typescript": "^4.0.5"
   }
 }
