--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint"
+      "pre-push": "npm run lint && node scripts/lighthouse/index.js $HUSKY_GIT_STDIN"
     }
   },
   "scripts": {
@@ -31,7 +31,9 @@
     "file-loader": "^6.2.0",
     "husky": "^4.3.6",
     "imagemin-webp-webpack-plugin": "^3.3.3",
+    "lighthouse": "^6.5.0",
     "serve": "^11.3.2",
+    "serve-handler": "^6.1.3",
     "typescript": "^4.1.3"
   }
 }
