--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
     "file-loader": "^6.2.0",
     "husky": "^4.3.7",
     "imagemin-webp-webpack-plugin": "^3.3.3",
