--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "export": "next export",
     "build-export": "npm run build && npm run export",
     "serve": "npm run build-export && serve out",
-    "lint": "tsc --noEmit -p .",
+    "lint": "eslint src",
     "pm2": "npm run build-export && pm2 start ecosystem.config.js",
     "upgrade": "npx npm-check-updates -u"
   },
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^4.13.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.17.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "file-loader": "^6.2.0",
     "husky": "^4.3.7",
