--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lighthouse": "^7.0.0",
     "serve": "^11.3.2",
     "serve-handler": "^6.1.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack-image-resize-loader": "^4.0.0"
   }
 }
