--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     }
   },
   "scripts": {
+    "postinstall": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
