--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"export": "next export",
 		"build-export": "npm run build && npm run export",
 		"serve": "npm run build-export && serve out",
-		"lint": "eslint src",
+		"lint": "tsc --noEmit",
 		"prettier": "prettier --write src/",
 		"pm2": "npm run build-export && pm2 start ecosystem.config.js",
 		"upgrade": "npx npm-check-updates -u"
@@ -30,13 +30,7 @@
 		"@types/node": "^14.14.28",
 		"@types/react": "^17.0.2",
 		"@types/styled-components": "^5.1.7",
-		"@typescript-eslint/eslint-plugin": "^4.15.1",
-		"@typescript-eslint/parser": "^4.15.1",
 		"babel-plugin-styled-components": "^1.12.0",
-		"eslint": "^7.20.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-react": "^7.22.0",
 		"file-loader": "^6.2.0",
 		"husky": "^5.2.0",
 		"imagemin-webp-webpack-plugin": "^3.3.3",
