--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
 	"private": true,
 	"husky": {
 		"hooks": {
-			"pre-push": "pretty-quick --staged && npm run lint && node scripts/lighthouse/index.js $HUSKY_GIT_STDIN"
+			"pre-push": "npm run lint && node scripts/lighthouse/index.js $HUSKY_GIT_STDIN"
 		}
 	},
 	"scripts": {
-		"postinstall": "husky install",
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
@@ -18,28 +17,28 @@
 		"lint": "tsc --noEmit",
 		"prettier": "prettier --write src/",
 		"pm2": "npm run build-export && pm2 start ecosystem.config.js",
-		"upgrade": "npx npm-check-updates -u"
+		"upgrade": "npx npm-check-updates --upgrade --reject husky && npx npm-check-updates --filter husky --target minor"
 	},
 	"dependencies": {
-		"next": "^10.0.7",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
+		"next": "^10.0.9",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"styled-components": "^5.2.1"
 	},
 	"devDependencies": {
-		"@types/node": "^14.14.28",
-		"@types/react": "^17.0.2",
-		"@types/styled-components": "^5.1.7",
+		"@types/node": "^14.14.35",
+		"@types/react": "^17.0.3",
+		"@types/styled-components": "^5.1.9",
 		"babel-plugin-styled-components": "^1.12.0",
 		"file-loader": "^6.2.0",
-		"husky": "^5.2.0",
+		"husky": "^4.3.8",
 		"imagemin-webp-webpack-plugin": "^3.3.3",
-		"lighthouse": "^7.1.0",
+		"lighthouse": "^7.3.0",
 		"prettier": "^2.2.1",
 		"pretty-quick": "^3.1.0",
 		"serve": "^11.3.2",
 		"serve-handler": "^6.1.3",
-		"typescript": "^4.1.5",
+		"typescript": "^4.2.3",
 		"webpack-image-resize-loader": "^4.0.0"
 	}
 }
