--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,7 +61,8 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"jsx": "preserve"
+		"jsx": "preserve",
+		"incremental": true
 	},
 	"include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
 	"exclude": ["node_modules", ".husky", "out", ".next", ".git", "scripts", "public", ".vscode"]
