--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,21 @@
 # This is a configuration file for deploying in Netlify. If you're not using Netlify,
 # you can delete this file.
 
-# Plugin for faster nextjs builds
 [[plugins]]
-package = "netlify-plugin-cache-nextjs"
+package = "@netlify/plugin-nextjs"
+
+[build]
+command = "echo \"Env is $env\" && npm run build-export"
+publish = "out/"
+
+[context.production.environment]
+env = "production"
+
+[context.branch-deploy.environment]
+env = "development"
+
+[context.deploy-preview.environment]
+env = "development"
+
+[build.environment]
+NETLIFY_NEXT_PLUGIN_SKIP = "true"
