--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
+		"@netlify/plugin-nextjs": "^4.8.0",
 		"@types/node": "^17.0.36",
 		"@types/react": "^18.0.9",
 		"@types/styled-components": "^5.1.25",
